third_party/move/tools/move-decompiler/tests/compiler-v2-test/deprecated/deprecated_placement_module.exp
module 0x41::N {
    struct S has drop {
    }
    public fun bar(): S {
        S{}
    }
    public fun consume(_x: S) {
        ()
    }
}

module 0x42::M {
    use 0x41::N;
    struct S {
    }
    public fun foo(): N::S {
        N::bar()
    }
}

script {
    use 0x41::N;
    use 0x42::M;
    entry fun <SELF>_0() {
        N::consume(M::foo());
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ deprecated_placement_module.move:24:15
   │
24 │     entry fun <SELF>_0() {
   │               ^
   │               │
   │               Unexpected '<'
   │               Expected an identifier
